# harness-core

./: README.md  WORKSPACE  bazelrc.common  build.properties  versioning.md
120-ng-manager/: BUILD.bazel  config.yml
120-ng-manager/container/scripts/: replace_configs.sh
260-delegate/: BUILD.bazel  module-dependency.hash
260-delegate/container/scripts/: delegate.sh  start.sh
270-delegate-service-app/: module-dependency.hash
340-ce-nextgen/: config.yml
340-ce-nextgen/container/scripts/: replace_configs.sh
360-cg-manager/: config.yml
420-delegate-service/: BUILD.bazel
840-template-service/: BUILD.bazel
889-oauth-client/: BUILD.bazel
889-oauth-client/src/main/java/io/harness/ng/oauth/: BaseOauthClient.java  BitbucketOauthClient.java  GithubOauthClient.java  GitlabOauthClient.java  OauthAccessToken.java  OauthClient.java
930-delegate-tasks/: BUILD.bazel
941-filestore-client/: BUILD.bazel
951-debezium-service/: config.yml
dockerization/base-image/: Dockerfile-ubi-java-base-cie
dockerization/base-image/ubi-java-base-cie/: Dockerfile-ubi-java-base-cie
dockerization/base-images/on-prem-dockerhub/: sign-and-push-builds-dockerhub.sh
dockerization/delegate/immutable-scripts/: start.sh
dockerization/delegate/scripts/: start.sh
dockerization/manager/scripts/: replace_configs.sh
platform-service/modules/notification-service/: BUILD.bazel
platform-service/service/: BUILD.bazel
project/: main_maven_install.json
scripts/bazel/: bazel_script.sh
scripts/copy-entities/: copy_entities_script.py
scripts/jenkins/: author-check.sh
(+548 files in other folders)
