load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//890-sm-core:module",
        "//950-ng-authentication-service:module",
    ],
)
